# gallery

./: .gitignore  LICENSE  README.md  generate_gallery.py  justfile  pyproject.toml
static/: app.js  style.css
static/justified/: justified-layout.esm.js
templates/: footer.html  gallery_item.html  header.html  page.html
